--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@ svg.append("g")
   .enter().append("path")
     .attr("d", pathMonth);
 
-d3.csv("dji.csv", function(error, csv) {
+d3.csv("log.csv", function(error, csv) {
   if (error) throw error;
 
-  const data = d3.nest(
-)      .key(function(d) { return d.Date; })
-      .rollup(function(d) { return (d[0].Close - d[0].Open) / d[0].Open; })
+  const data = d3.nest()      
+  	.key(function(d) { return d.Date; })
+      .rollup(function(d) { return (d.time)})
     .object(csv);
 
   rect.filter(function(d) { return d in data; })
